# woobot2

./: .env.example  .gitignore  README.md  pyproject.toml
src/: main.py
src/api/: endpoint.py  schemas.py  server.py  utils.py
src/llm/: agent.py  prompts.py  tools.py
